Rest of sumba moves

--- a/index.html
+++ b/index.html
@@ -376,8 +376,15 @@
 				{ index: 5.1, name: "Chase Turn (half)", 				rhythm: "1234;1234;1234;1234;1234;1234", 	elements: "Progressive Basic, Half Chase Turn (Walk Forward, Millitary turn), Half Chase Turn (Walk Forward, Millitary turn), Progressive Basic"}
 			],
 			"Samba": [
-				{ index: 1.1, name: "Basic", 				rhythm: "1&2;1&2",	footPos: "41;41", elements: "Forward Ballance Step; Back Ballance Step"}, 
-				{ index: 1.2, name: "Left Box Turn", 		rhythm: "1&2;1&2",	footPos: "42;42", elements: "Forward Ballance Step to side; Back Ballance Step to side" }
+				{ index: 1.1, name: "Basic", 						rhythm: "1&2;1&2",	footPos: "41;41", elements: "Forward Ballance Step; Back Ballance Step"}, 
+				{ index: 1.2, name: "Left Box Turn", 			rhythm: "1&2;1&2",	footPos: "42;42", elements: "Forward Ballance Step to side; Back Ballance Step to side" },
+				{ index: 2.1, name: "Fifth Position Breaks", 	rhythm: "1&2;1&2",	footPos: "255;255", elements: "" },
+				{ index: 2.2, name: "Progressive Fifth Position Breaks", 	rhythm: "1&2;1&2",	footPos: "M[422;422] F[455;455]", elements: "M[Forward, Side Rock; Forward, Side Rock ] F[Back/Side, 5th Position; Back/Side, 5th Postion" },
+				{ index: 3, name: "Promenade Conversa", 	rhythm: "1&2;1&2",	footPos: "255;255;555;555;555;555;555;521", elements: "Fifth Position Break; Fifth Position Break, Conversa x5; 2nd half twinkel (Cross, Side, Together)" },
+				{ index: 4.1, name: "Single Chasse", 	rhythm: "1&2;1&2",	footPos: "21;21", elements: "Side, Close; Side, Close.  (holla-hoop hips)" },
+				{ index: 4.2, name: "Triple Chasse", 	rhythm: "",	footPos: "", elements: "" },
+				{ index: 4.3, name: "Travelling Chasse", 	rhythm: "",	footPos: "", elements: "" },
+				{ index: 5, name: "Left Cross Turn", 	rhythm: "",	footPos: "", elements: "" }
 			]
 		};
 
