--- a/index.html
+++ b/index.html
@@ -362,7 +362,11 @@
 				{ index: 3.2, name: "Two-Way Underarm Turn", 			rhythm: "123;4&1;23;4&1;23;4&1;234&" },
 				{ index: 4.1, name: "Chase Turns", 						rhythm: "1234&;1234&;1234&;1234&;1234&;1234&" },
 				{ index: 4.2, name: "Cross Over Chase", 				rhythm: "1234&;1234&;1234&;1234&;1234&;1234&" },
-				{ index: 5, name: "Cross Triple Step", 					rhythm: "123;4&1;2&3;4&1;23;4&1;2&3:4&1:23;4&1234&" }
+				{ index: 5, name: "Cross Triple Step", 					rhythm: "123;4&1;2&3;4&1;23;4&1;2&3:4&1:23;4&1234&" },
+				
+				{ index: -104, name: "5th Position Breaks", 			rhythm: "" },
+				{ index: -105, name: "Sweethearts", 					rhythm: "1234&;1234&;1234&;1234&;1234&;1234&;1234&;1234&", elements: "1st Half Basic, 1st half Crossover (switch hands), 2nd Half Crossover, x4 side chasses while pulling girls arms over/behind your neck - At each end of the chasses guy does back rock and girl does forward rock, During the last backrock, swing the girl in front of you, Progressive." }
+				
 			],
 			"East Coast Swing": [
 				{ index: 1.1, name: "Single Time Basic", 				rhythm: "SSQQ" },
